Fix editor page scrolling and remove excess white space on mobile

--- a/src/angular-app/languageforge/lexicon/editor/_editor.scss
+++ b/src/angular-app/languageforge/lexicon/editor/_editor.scss
@@ -295,7 +295,7 @@ dc-entry .card {
     .lexiconItemListContainer {
       margin-bottom: 15px;
       @include media-breakpoint-up(sm) {
-        height: calc(100vh - 600px);
+        height: calc(100vh - 568px);
         overflow: auto;
         }
     }
@@ -318,7 +318,7 @@ dc-entry .card {
 
 #lexAppEditView {
   .lexiconItemListContainer {
-    max-height: calc(100vh - 600px);
+    height: calc(100vh - 568px);
     overflow: auto;
   }
   .word-definition-title {
