--- a/src/angular-app/languageforge/lexicon/editor/comment/lex-comments-view.scss
+++ b/src/angular-app/languageforge/lexicon/editor/comment/lex-comments-view.scss
@@ -18,7 +18,7 @@
 .container-scroll {
   overflow-y: scroll;
   overflow-x: hidden;
-  height: calc(100vh - 330px);
+  height: calc(100vh - 296px);
   }
 
 .comments-right-panel {
